# RooManager

./: CMakeLists.txt  README.md
include/: core.h  crow_service.h  hash_table.h  linklist.h  my_vector.h  reserv_storage.h  room_storage.h  seat_heap.h  sparse_matrix.h  student_storage.h
src/: core.cpp  main.cpp  reserv_storage.cpp  room_storage.cpp  student_storage.cpp
